[metadata]
name = HyTA
version = 0.1.0
author = Toygar Aksoy
author_email = toygar.aksoy@gmail.com
url = https://github.com/Hypance/HypanceDataAnalysis
description = Indicators for Hypance Project
long_description = file: README.md
long_description_content_type = text/markdown
keywords = technical analysis
license = MIT

[options]
packages = find: 

[options.packages.find]  
where= .  
include=hyta*  
